--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,26 @@
 {
   "short_name": "Tenzies",
   "name": "Tenzies Game",
+  "description":"A simple tenzie game to roll dice until all dice number are thesame",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Tenzies_192x192.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "Tenzies_192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "Tenzies_1_512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#01011f",
+  "background_color": "#f5f5f5"
 }
